--- a/spec/dummy/app/views/pages/_header.erb
+++ b/spec/dummy/app/views/pages/_header.erb
@@ -57,6 +57,9 @@
     <%= link_to "One Page with Many Examples at Once", root_path %>
   </li>
   <li>
+    <%= link_to "Manually Rendered Component", client_side_manual_render_path %>
+  </li>
+  <li>
     <%= link_to "React Router", react_router_path %>
   </li>
   <li>
