--- a/spec/dummy/app/views/pages/client_side_manual_render.html.erb
+++ b/spec/dummy/app/views/pages/client_side_manual_render.html.erb
@@ -10,7 +10,7 @@
     <pre>
   <%%= react_component("ManualRenderApp", props: {}, prerender: false) %>
     </pre>
-    <p>spec/dummy/app/views/pages/client_side_manual_render.html.erb</p>
+    <h4>spec/dummy/app/views/pages/client_side_manual_render.html.erb</h4>
     <br>
   </li>
 
@@ -23,7 +23,7 @@
     ManualRenderApp,
   });
     </pre>
-    <p>spec/dummy/client/app/startup/clientRegistration.jsx</p>
+    <h4>spec/dummy/client/app/startup/clientRegistration.jsx</h4>
     <br>
   </li>
 
@@ -41,7 +41,7 @@
     ReactDOM.render(reactElement, document.getElementById(domNodeId));
   };
     </pre>
-    <p>spec/dummy/client/app/startup/ManualRenderAppRenderer.jsx</p>
+    <h4>spec/dummy/client/app/startup/ManualRenderAppRenderer.jsx</h4>
     <br>
   </li>
 </ul>
